--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 
     <!-- banner start -->
-    <!-- <div class="hero  min-h-screen">
+    <div class="hero  min-h-screen">
         <div class="hero-content text-center flex-col">
             <div><img src="./assets/banner.png" alt=""></div>
           <div class="max-w-md">
@@ -66,7 +66,7 @@
             <button class="btn btn-primary">View Details<i class="fa-solid fa-arrow-right -rotate-45 " ></i></button>
           </div>
         </div>
-      </div> -->
+      </div>
 
 </header>
 
