let's connect section added

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 
 <!-- let's connect section -->
-<!-- <div class="hero bg-[url('./assets/bg.jpg')] bg-no-repeat bg-cover min-h-screen">
+<div class="hero bg-[url('./assets/bg.jpg')] bg-no-repeat bg-cover min-h-screen">
   <div class="hero-content flex-col ">
     <div class="text-center ">
       <button class="btn bg-white"><i class="fa-solid fa-arrow-right bg-" ></i>Let’s Connect</button>
@@ -276,7 +276,7 @@
 
     </div>
   </div>
-</div> -->
+</div>
 
 </main>
 
