--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
 </main>
 
-  <!-- <footer class="footer footer-center bg-black text-base-content rounded p-10">
+  <footer class="footer footer-center bg-black text-base-content rounded p-10">
     <a class="btn btn-ghost inline-flex "><i class="fa-solid fa-arrow-right -rotate-45 text-black   rounded-full bg-[#90eb28] w-5 h-5 inline-flex justify-center items-center " ></i><span class="text-2xl text-[#E9E9E9]">Rinterio</span></a>
 
     <aside>
@@ -299,7 +299,7 @@
 
     <div><a class="btn bg-[#90eb28] rounded-3xl ">Book Consult<i class="fa-solid fa-arrow-right -rotate-45 text-white   rounded-full bg-black w-8 h-8 inline-flex justify-center items-center " ></i></a></div>
 
-  </footer> -->
+  </footer>
 
 </body>
 </html>
