--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rinterio</title>
 
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+
     <!-- tailwind cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- daisi cdn -->
@@ -63,7 +68,7 @@
             <p class="py-6">
                 The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
             </p>
-            <button class="btn bg-[#ABEF5F] mb-20">View Details<i class="fa-solid fa-arrow-right -rotate-45 " ></i></button>
+            <button class="btn bg-[#ABEF5F80] mb-20">View Details<i class="fa-solid fa-arrow-right bg-[#90eb28] rounded-full w-5 h-5 inline-flex justify-center items-center -rotate-45 " ></i></button>
           </div>
         </div>
       </div>
@@ -122,7 +127,7 @@
 </div>  
 
 <!-- how we work section -->
-<div class="hero bg-base-200 min-h-screen mb-20">
+<div class="hero bg-base-200  min-h-screen mb-20">
   <div class="hero-content flex-col ">
     <div class="text-center">
       <button class="btn bg-[#ABEF5F33]"><i class="fa-solid fa-arrow-right bg-" ></i>How we works</button>
@@ -278,7 +283,7 @@
       </div>
       
       <div class="form-control mt-6">
-        <button class="btn bg-[#ABEF5F]">Send Mail<i class="fa-solid fa-arrow-right -rotate-45 bg-" ></i></button>
+        <button class="btn bg-[#ABEF5F80]">Send Mail<i class="fa-solid fa-arrow-right -rotate-45 bg-[#90eb28] rounded-full w-5 h-5 inline-flex justify-center items-center" ></i></button>
       </div>
 
     </div>
