--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -127,8 +127,8 @@
 </div>  
 
 <!-- how we work section -->
-<div class="hero bg-base-200  min-h-screen mb-20">
-  <div class="hero-content flex-col ">
+<div class="hero bg-base-200  min-h-screen mb-20 justify-center items-center">
+  <div class="hero-content flex-col  ">
     <div class="text-center">
       <button class="btn bg-[#ABEF5F33]"><i class="fa-solid fa-arrow-right bg-" ></i>How we works</button>
       <h1 class="text-5xl font-bold">Our Works Process</h1>
